--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,12 +6,12 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row">
-        <td>GPS 938</td>
-        <td>Positioning</td>
-        <td>true</td>
-        <td>HIGH</td>
-        <td>2001-11-01</td>
+    <tr class="data-row" *ngFor = "let item of satellites">
+        <td>{{item.name}}</td>
+        <td [class.warning] = "item.isSpaceDebris()">{{item.type}}</td>
+        <td>{{item.operational}}</td>
+        <td>{{item.orbitType}}</td>
+        <td>{{item.launchDate}}</td>
     </tr>
 </table>
 
